--- a/src/Nobetci.Web/Views/Cleaning/Index.cshtml
+++ b/src/Nobetci.Web/Views/Cleaning/Index.cshtml
@@ -236,7 +236,7 @@
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">QR Kod</h5>
+                <h5 class="modal-title">@(isTurkish ? "QR Kod" : "QR Code")</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body text-center">
